--- a/index.html
+++ b/index.html
@@ -283,11 +283,12 @@ We are a growing team of enthusiasts, creatives, and product experts dedicated t
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2025 SmartDevil. All rights reserved.</p>
+          <p>&copy; 2025 Rsell Shop. All rights reserved.</p>
         </div>
       </div>
     </footer>
 
     <script type="module" src="/app.js"></script>
   </body>
+
 </html>
