--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ We are a growing team of enthusiasts, creatives, and product experts dedicated t
                   <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat-item">
-                  <div class="stat-number">24/7</div>
+                  <div class="stat-number">24hr</div>
                   <div class="stat-label">Customer Support</div>
                 </div>
               </div>
